@@ -21,7 +21,7 @@ Test::MinimumVersion.max_target_perl = 5.008003
 
 [Prereqs / DevelopRequires]
 Test::Requires = 0
-Test::CleanNamespaces = 0
+Test::CleanNamespaces = 0.15
 
 [MetaResources]
 x_IRC = irc://irc.perl.org/#moose
