@@ -9,13 +9,11 @@ use MooseX::Meta::TypeConstraint::Structured;
 use MooseX::Meta::TypeConstraint::Structured::Optional;
 use MooseX::Types::Structured::OverflowHandler;
 use MooseX::Types::Structured::MessageStack;
-use Sub::Exporter::ForMethods 'method_installer';
 use Devel::PartialDump 0.13;
 use Scalar::Util qw(blessed);
 use namespace::clean 0.08;
 use MooseX::Types 0.22 -declare => [qw(Dict Map Tuple Optional)];
 use Sub::Exporter 0.982 -setup => {
-    installer => method_installer,
     exports => [ qw(Dict Map Tuple Optional slurpy) ],
 };
 use if MooseX::Types->VERSION >= 0.42,
